--- a/package.json
+++ b/package.json
@@ -1,37 +1,27 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "eyehack-blog",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
-  "version": "0.1.0",
-  "license": "MIT",
+  "description": "Blog site for eyehack.com",
+  "version": "2.0.0",
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "dev": "next dev",
+    "build": "next build && next export",
+    "start": "next start"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.22",
-    "@emotion/styled": "^10.0.23",
-    "gatsby": "^4.24.5",
-    "gatsby-plugin-emotion": "^4.1.15",
-    "gatsby-plugin-typography": "^2.3.17",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-typography": "^0.16.19",
-    "typography": "^0.16.19"
+    "next": "^13.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "prettier": "^2.7.1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/goshdarnheck/eyehack"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/goshdarnheck/eyehack/issues"
   }
 }
