--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Blog site for eyehack.com",
   "version": "2.0.0",
   "scripts": {
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,json,md,css}\"",
     "dev": "next dev",
     "build": "next build && next export",
     "start": "next start"
